# Argus-MPCS_Blackpill_STM32F411_ZephyrRTOS

./: .gitignore  CMakeLists.txt  README.md  VERSION  app.overlay  prj.conf
include/: adc_driver.h  cmd.h  encoder.h  hub.h  logic_engine.h  motor_driver.h  ota_handler.h  protocol_defs.h  sensor_data.h
src/: adc_driver.c  cmd.c  encoder.c  hub.c  logic_engine.c  main.c  motor_driver.c  ota_handler.c  sensor_data.c
test/: ota_master.cpp  spi_loopback.cpp
tools/: .clang-format  code_format.sh
